fix: modifiy game_data.json and OfferCardTrackTest with new attributes